<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea to the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="question_continent">There are seven Continents in the world as of 2021.</string>
    <string name="question_amazon">The Amazon Forest is located in India.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="previous_button">PREV</string>
    <string name="skip_button">SKip?</string>
    <string name="First_Question">First Question!</string>
    <string name="go_back">Go back to your last question</string>
    <string name="go_forward">Go to the next Question</string>
    <string name="no1_question">Question 1.</string>
    <string name="no2_question">Question 2.</string>
    <string name="no3_question">Question 3.</string>
    <string name="no4_question">Question 4.</string>
    <string name="no5_question">Question 5.</string>
    <string name="no6_question">Question 6.</string>
    <string name="no7_question">Question 7.</string>
    <string name="no8_question">Question 8.</string>
    <integer name="percentage_id">0</integer>
</resources>