<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/no1_question"/>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        tools:text="@string/question_australia"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/go_back"/>

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/go_forward"/>

    </LinearLayout>

    <TextView
        android:id="@+id/skip_textViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/skip_button"
        android:layout_marginRight="29dp"
        android:layout_marginTop="-76dp"
        android:layout_marginEnd="29dp" />

</LinearLayout>
